# certifiable-training

./: .github  .gitignore  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTOR-LICENSE-AGREEMENT.md  LICENSE  Makefile  README.md  buildfile  manifest  repositories.manifest
certifiable-build/github/workflows/: ci.yml
certifiable-build/scripts/: build.sh  install.sh  release.sh
docs/: CT-MATH-001.md  CT-SPEC-001.md  CT-STRUCT-001.md
docs/requirements/: SRS-001-DVM-PRIMITIVES.md  SRS-002-PRNG.md  SRS-003-COMPENSATED.md  SRS-004-REDUCTION.md  SRS-005-FORWARD.md  SRS-006-BACKWARD.md  SRS-007-OPTIMIZER.md  SRS-008-MERKLE.md  SRS-009-PERMUTATION.md
etc/lima/: tt-metal-dev.yaml
examples/: buildfile  train_xor.c  verify_step.c
include/: backward.h  buildfile  compensated.h  ct_types.h  dvm.h  forward.h  merkle.h  optimizer.h  permutation.h  prng.h  reduction.h  tensor.h
scripts/: clean.sh  config.sh  package.sh  setup.sh  start-tt.sh  test.sh
src/: buildfile
src/audit/: checkpoint.c  merkle.c
src/dvm/: compensated.c  primitives.c  prng.c  reduction.c
src/layers/: activation.c  conv2d.c  linear.c  normalization.c
src/training/: backward.c  forward.c  optimizer.c  permutation.c  scheduler.c
tests/: buildfile
tests/unit/: buildfile  test_backward.c  test_bit_identity.c  test_compensated.c  test_forward.c  test_merkle.c  test_optimizer.c  test_permutation.c  test_primitives.c  test_prng.c  test_reduction.c
